--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </h1>
   </header>
   <section class="grid">
+    <h3 id="currentcity"></h3>
     <section class="controls" id="tempcontrols">
       <h2>
         Temperature
@@ -65,7 +66,7 @@
     </section>
     <section class="cityside">
       <section class="city" id="cityone">
-        <span id="cityonename"></span>
+        <input id="cityonename" type="text">
         <span class="citybutton" id="cityoneresetname">
           🔄
         </span>
@@ -90,7 +91,7 @@
 
 
       <section class="city" id="citytwo">
-        <span id="citytwoname"></span>
+        <input id="citytwoname">
         <span class="citybutton" id="citytworesetname">
           🔄
         </span>
@@ -114,7 +115,7 @@
       </section>
 
       <section class="city" id="citythree">
-        <span id="citythreename"></span>
+        <input id="citythreename">
         <span class="citybutton" id="citythreeresetname">
           🔄
         </span>
