--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
               <p id="cityName">Seattle </p>
           </section>
       </header>
-      <main>
-        
+      <main class="main">
+        <div class="wrapper">
           <section class="Temp">
               <h1 class="temperature">Temperature</h1>
               <div>
@@ -31,7 +31,7 @@
           </section>
 
           <section class="Sky">
-            <h2 class="Sky">Sky</h2>
+            <h2 class="Skytittle">Sky</h2>
             <label for="skyoption">Choose a sky:</label>
             <select id="skyOptions">
               <option value="sunny">Sunny</option>
@@ -65,6 +65,7 @@
           </section>
 
           <script src="src/index.js"></script>
+        </div>
       </main>
   </body>
 </html>
