--- a/index.html
+++ b/index.html
@@ -10,18 +10,16 @@
 <body class = "grid">
     <header class=header>
         <h1>Weather Report</h1>
-        <p>For the lovely city of Madeup</p>
+        <p id="name"> For the lovely city of ✨Madeup✨</p>
     </header>
     <nav class="nav">
         <ul>
             <li id="temp" class="details">
                 <p class="text">Temperature</p>
-                <section>
-                    <p class="temperature-text">Temperature</p>
-                </section>
-                <div id="temp-emoji-holder">
-                    <button id = "temp-up">⬆️</button>
-                    <button id = "temp-down">⬇️</button>
+                    <p id="tempValue" class="temperature-text">34°F</p>
+                <div id="temperature-buttons">
+                    <button id = "tempUp">⬆️</button>
+                    <button id = "tempDown">⬇️</button>
                 </div>
             </li>
             <li id="sky" class="details">
@@ -37,10 +35,10 @@
             <li id="city" class="details">
                 <p class="text">City Name</p>
                 <div id = "city-div">
-                    <input type="text" id="city-input">
+                    <input type="text" id="cityInput">
                 </div>
                 <div id = "city-div">
-                    <button id = "city-reset">RESET</button>
+                    <button id = "cityReset">RESET</button>
                 </div>
             </li>
         </ul>
@@ -51,10 +49,18 @@
 
     <main class="main">
         <p id="display-title">Weather Garden</p>
-        <section id="weather-garden-display" class="garden-display">
-            <p>Weather Garden Display.</p>
+        <section id="display" class="garden-display">
+            <ul id="gardenDisplay">
+                <li id ="clouds">🌨❄️🌨🌨❄️❄️🌨❄️🌨❄️❄️🌨🌨</li>
+                <li id ="flowers">🌲🌲⛄️🌲⛄️🍂🌲🍁🌲🌲⛄️🍂🌲</li>
+            </ul>
         </section>
     </main>
-    <script src="src/index.js"></script>    
+    
+    <footer>
+    </footer> 
+    <script src="src/index.js">
+    </script>  
+
 </body>
 </html>
