--- a/index.html
+++ b/index.html
@@ -16,57 +16,58 @@
         <div class ='header' id='mutableSubHeader'>
         </div>
     </div>
-    <section class ='mutableComponents'>
-        <div class = 'widget' id ='temperatureChanger'>
-            <div class = 'widget text' id ='Temperature Title'>
-                <p>Temperature</p>
-            </div>
-            <div class ='arrowKeys'>
-                <div id ='Upper Arrow'>
-                    <button id ='upArrow'>⬆️</button>
+    <main class ='websiteBody'>
+        <section class ='mutableComponents'>
+            <div class = 'widget' id ='temperatureChanger'>
+                <div class = 'widget text' id ='Temperature Title'>
+                    <p>Temperature</p>
                 </div>
-                <div id ='Lower Arrow'>
-                    <button id ='downArrow'>⬇️</button>
+                <div class ='arrowKeys'>
+                    <div id ='Upper Arrow'>
+                        <button id ='upArrow'>⬆️</button>
+                    </div>
+                    <div id ='Lower Arrow'>
+                        <button id ='downArrow'>⬇️</button>
+                    </div>
+                </div>
+                <div class ='widgetText' id = 'temperatureDisplay'>
                 </div>
             </div>
-            <div class ='widgetText' id = 'temperatureDisplay'>
+            <div class = 'widget' id ='skyChanger'>
+                <div class = 'widgetText' id='skyTitle'>
+                    <p>Sky</p>
+                </div>
+                <div class ='dropdownMenu'>
+                    <select name ="Select Weather" id ='dropdownButton'>
+                    <option value="sunny">Sunny</option>
+                    <option value="cloudy">Cloudy</option>
+                    <option value="rainy">Rainy</option>
+                    <option value="snowy">Snowy</option>
+                    </select>
+                </div>
+            </div>
+            <div class ='widget' id ='hometownChanger'>
+                <div class ='widget text' id = 'Hometown Title'>
+                    <p>City Name</p>
+                </div>
+                <form id="hometownForm">
+                    <label>City Input: <input type='text' id='cityInput'></label>
+                    <button type='submit' id='submitInput'>Submit</button>
+                </form>
+            </div>
+        </section>
+        <div class ='visualComponent'>
+            <div class='Immutable Title'>
+                <p>Weather Garden</p>
+            </div>
+            <div id='gardenBackground'>
+                <div class='display' id='topDisplay'>
+                </div>
+                <div class='display' id='bottomDisplay'>
+                </div>
             </div>
         </div>
-        <div class = 'widget' id ='skyChanger'>
-            <div class = 'widgetText' id='skyTitle'>
-                <p>Sky</p>
-            </div>
-            <div class ='dropdownMenu'>
-                <select name ="Select Weather" id ='dropdownButton'>
-                <option value="sunny">Sunny</option>
-                <option value="cloudy">Cloudy</option>
-                <option value="rainy">Rainy</option>
-                <option value="snowy">Snowy</option>
-                </select>
-            </div>
-        </div>
-        <div class ='widget' id ='hometownChanger'>
-            <div class ='widget text' id = 'Hometown Title'>
-                <p>City Name</p>
-            </div>
-            <form id="hometownForm">
-                <label>City Input: <input type='text' id='cityInput'></label>
-                <button type='submit' id='submitInput'>Submit</button>
-            </form>
-        </div>
-    </section>
-    <div class ='Visual Component'>
-        <div class='Immutable Title'>
-            <p>Weather Garden</p>
-        </div>
-        <div class='gardenBackground'>
-            <div class='display' id='topDisplay'>
-            </div>
-            <div class='display' id='bottomDisplay'>
-                <p>Mutable Emojis</p>
-            </div>
-        </div>
-    </div>
+    </main>
     <script src ="src/index.js" type="text/javascript"></script>
 </body>
 </html>
