Adds toggle form

--- a/index.html
+++ b/index.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/index.css">
+    <script src="src/index.js"></script>
     <title>Weather Report</title>
+    <form>Toggle Form<br>
+        <label for='location'>Location:</label></form>
+        <input type="text" id='location' name='location'><br>
+        <label for='sky'>Sky:</label>
+        <select id='sky' name='sky'>
+            <option value="dry-rock">Dry Rock</option>
+            <option value="wet-rock">Wet Rock</option>
+            <option value="shady-rock">Shady Rock</option>
+            <option value="no-rock">No Rock</option>
+            <option value="white-rock">White Rock</option>
+            <option value="hot-rock">Hot Rock</option>
+        </select><br>
+        <button onclick="increment()">+</button>
+        <input id=demoInput type=number>
+        <button onclick="decrement()">-</button>
+    </form>
 </head>
 <body>
     
