--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <script src="src/index.js" type="text/javascript"></script>
     <title>Weather Report</title>
     <header id='reportHeader'>
-        Weather report for <span id='location'>the invisible forest</span>
+        Weather report for <span id='location'>Seattle</span>
     </header>
     <main>
         <form id='weatherForm'>
             <label htmlFor="tempInput">Temperature: </label>
             <button id='increment-btn'>+</button>
-            <input type="number" id='tempInput' value="256">
+            <input type="number" id='tempInput' value="75">
             <button id='decrement-btn'>-</button>
             <br>
             <label htmlFor="locationInput">Location: </label>
-            <input id='locationInput' value="the invisible forest">
+            <input id='locationInput' value="Seattle">
             <button id='resetLocation'>Reset location</button>
             <br>
             <label htmlFor="skyInput">Sky: </label>
