--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <form id='weatherForm'>
             <label htmlFor="tempInput">Temperature: </label>
             <button id='increment-btn'>+</button>
-            <input type="number" id='tempInput' value="75">
+            <span id='tempInput'>75</span>
             <button id='decrement-btn'>-</button>
             <br>
             <label htmlFor="locationInput">Location: </label>
