fixed landscape and sky display

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <option value="sunny">Sunny</option>
             <option value="rainy">Rainy</option>
             <option value="snowy">Snowy</option>
-            <option value="snowy">Cloudy</option>
+            <option value="cloudy">Cloudy</option>
         </select>
     </div>
     <div id="art">
