--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <script src="src/index.js" type="text/javascript"></script>
     <title>Weather Report</title>
     <header id='reportHeader'>
-        Weather report for <span id='location'>Seattle</span>
+        Weather report for <span id='locationOutput'>Seattle</span>
     </header>
     <main>
         <form id='weatherForm'>
             <label htmlFor="tempInput">Temperature: </label>
-            <button id='increment-btn'>+</button>
+            <button id='incrementButton'>+</button>
             <span id='tempInput'>75</span>
-            <button id='decrement-btn'>-</button>
+            <button id='decrementButton'>-</button>
             <br>
             <label htmlFor="locationInput">Location: </label>
             <input id='locationInput' value="Seattle">
-            <button id='resetLocation'>Reset location</button>
+            <button id='resetLocationButton'>Reset location</button>
             <br>
             <label htmlFor="skyInput">Sky: </label>
             <select id='skyInput'>
@@ -30,8 +30,8 @@
             </select>
         </form>
         <div id='gardenOutput'>
-            <div id='skyOutput'></div>
-            <div id='landscapeOutput'></div>
+            <div id='skyOutput'>☁️ ☁️ ☁️ ☀️ ☁️ ☁️</div>
+            <div id='landscapeOutput'>🌸🌿🌼__🌷🌻🌿_☘️🌱_🌻🌷</div>
         </div>
     </main>
 </head>
