Adds basic structural elements to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
     <title>Weather Report</title>
 </head>
 <body>
-    
+    <!-- page header -->
+    <header id="page-header">Weather Report</header>
+    <!-- city section -->
+    <section id="city-section">
+        <h1 class="section-heading">City</h1>
+    </section>
+    <!-- temperature section -->
+    <section id="temperature-section">
+        <h1 class="section-heading">Temperature</h1>
+    </section>
+    <!-- sky section -->
+    <section id="sky-section">
+        <h1 class="section-heading">Sky</h1>
+    </section>
+    <!-- landscape section -->
+    <section id="landscape-section">
+        <h1 class="section-heading">Weather Garden</h1>
+    </section>
 </body>
 </html>
