Adds basic styles and links stylesheet

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
+    <link href="styles/index.css" rel="stylesheet" />
 </head>
 <body>
     <!-- page header -->
-    <header id="page-header">Weather Report</header>
+    <header id="page-header">
+        <h1>Weather Report</h1>
+    </header>
     <!-- city section -->
     <section id="city-section">
         <h1 class="section-heading">City</h1>
