--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <header class="column v-center">
         <h1>Today's Weather</h1>
-        <h2>In the city of Los Angeles</h2>
+        <h2>In the city of Cruxbury</h2>
     </header>
 
     <section id="mainBoxes" class="row evenly-spaced">
 
-        <div class="inputBoxes column">
+        <div class="boxed column">
             <h3>Temperature</h3>
                 <div class="row evenly-spaced">
                     <div id="temperatureButtons" class="column">
@@ -28,7 +28,7 @@
 
 
         </div>
-            <div class="inputBoxes column">
+            <div class="boxed column">
                 <h3>Sky</h3>
                 <div class="row evenly-spaced">
                     <form>
@@ -47,12 +47,12 @@
 
         </div>
 
-        <div class="inputBoxes column">
+        <div class="boxed column">
             <h3>City</h3>
                 <div class="row evenly-spaced">
                     <form action="">
                         <label>City:</label><br>
-                        <input type="text" id="cityForm" name="cityForm" value="La La Land"><br>
+                        <input type="text" id="cityForm" name="cityForm" value="Cruxbury"><br>
                         <input type="submit" value="Submit">
                         <input type="reset">
                     </form>
@@ -69,7 +69,7 @@
 
     <section id="gardenSection" class="row evenly-spaced">
         
-        <div id="theGarden" class="column v-center">
+        <div id="theGarden" class="boxed column v-center">
             <h3>It's Looking Like</h3>
                 <div class="row v-center">
                     <div class="column">
