--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Report</title>
+    <link href="styles/index.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    
-</body>
+    <section class="main_header">
+        <h1>Weather Report</h1>
+        <h3>For the wonderful city</h3>
+    </section>
+    <section class="temperature">
+        <h2>Temperature</h2>
+        <div class="temp_content">
+            <span id="increaseTemp">⬆️</span>
+            <span id="decreaseTemp">⬇️</span>
+            <span id="tempFarenheit">70</span>
+        </div>
+    </section>
+    <script src="src/index.js"></script>
 </html>
