Added selectable element for sky. Created section for landscapes.

--- a/index.html
+++ b/index.html
@@ -20,5 +20,26 @@
             <span id="tempFarenheit">70</span>
         </div>
     </section>
+    <section class="sky__section">
+        <h2>Sky</h2>
+        <select id="skySelect">
+            <option>Sunny</option>
+            <option>Cloudy</option>
+            <option>Rainy</option>
+            <option>Snowy</option>
+        </select>
+    </section>
+    <section class="weather">
+        <h2>Weather</h2>
+        <div class="weather_content">
+            <div id="sky"></div>
+        </div>
+    </section>
+    <section class="scenery">
+        <h2>Scenery</h2>
+        <div class="scenery_content">
+            <div id="landscape"></div>
+        </div>
+    </section>
     <script src="src/index.js"></script>
 </html>
