--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <section class="main_header">
         <h1>Weather Report</h1>
-        <h3>For the wonderful city</h3>
-            <span id="headerCityName" class="header__city-name"></span>
+        <h3>Today in the best city of</h3>
+            <span id="headerCityName" class="header__city-name yellow-green"></span>
     </section>
     <section class="city-name__section snowy">
         <h2>City Name</h2>
