--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <header id="city_name_header">
-        <h1 id="city_name">My Favorite City 😌</h1><br>
-        <h1 id="weather_report">Weather Report</h2>
+        <h1 id="city_name">Munich</h1><br>
+        <h2 id="weather_report">Weather Report</h2>
     </header>
     <section id="weather_body">
         <div id="sky_emojis">☁️ ☁️ ☁️ ☀️ ☁️ ☁️</div>
@@ -39,7 +39,7 @@
         </section>
         <section id="change_city">
             <h4>City</h4>
-            <input type="text" id="user_input" placeholder="City Name" oninput="updateCity()" value="My Favorite City 😌"></input>
+            <input type="text" id="user_input" placeholder="Munich" value=""></input>
             <button id="reset">Reset</button>
         </section>
     </section>
