update temp num with degree and farenheit

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <button id="raise_temp">🔼</button>
                 <button id="lower_temp">🔽</button>
             </span>
-            <span id="temp_display"></span>   
+            <span id="temp_display">55 <e id="degrees">&#176;F</e></span>   
         </section>
         <section id="change_sky">
             <h4>Sky</h4>
