--- a/index.html
+++ b/index.html
@@ -12,36 +12,38 @@
 </head>
 <body>
     <header id="city_name_header">
-        <h1 id="city_name">Munich</h1><br>
-        <h2 id="weather_report">Weather Report</h2>
+        <h1>Weather Report for:
+        <span id="city_name">Munich</span>  
+        </h1> 
     </header>
-    <section id="weather_body">
-        <div id="sky_emojis">☁️ ☁️ ☁️ ☀️ ☁️ ☁️</div>
-        <div id="ground_emojis">🌲🌲⛄️🌲⛄️🍂🌲🍁🌲🌲⛄️🍂🌲</div>
+    <section id="change_city">
+        <h4>City: </h4>
+        <input type="text" id="user_input" placeholder="Munich" value=""></input>
+        <button id="reset">Reset</button>
     </section>
-    <section id="change_widgets">
-        <section id="change_temp">
-            <h4>Temp</h4>
-            <span id="temp_buttons">
-                <button id="raise_temp">🔼</button>
-                <button id="lower_temp">🔽</button>
-            </span>
-            <span id="temp_display">55 <e id="degrees">&#176;F</e></span>   
+    <section id="widget_box">
+        <section id="weather_body" class="widgetbox_child">
+            <div id="sky_emojis">☁️ ☁️ ☁️ ☀️ ☁️ ☁️</div>
+            <div id="ground_emojis">🌲🌲⛄️🌲⛄️🍂🌲🍁🌲🌲⛄️🍂🌲</div>
         </section>
-        <section id="change_sky">
-            <h4>Sky</h4>
-            <select id="sky_dropdown">
-                <option id="dropdown_sunny" value="sunny">Sunny</option>
-                <option id="dropdown_cloudy" value="cloudy">Cloudy</option>
-                <option id="dropdown_rainy" value="rainy">Rainy</option>
-                <option id="dropdown_snowy" value="snowy">Snowy</option>
-            </select>
-        </section>
-        <section id="change_city">
-            <h4>City</h4>
-            <input type="text" id="user_input" placeholder="Munich" value=""></input>
-            <button id="reset">Reset</button>
-        </section>
+        <section id="change_widgets" class="widgetbox_child">
+            <section id="change_temp" class="changewidget_child">
+                <h4>Temp</h4>
+                <span id="temp_buttons">
+                    <button id="raise_temp">raise temp</button>
+                    <button id="lower_temp">lower temp</button>
+                </span>
+                <span id="temp_display">55 <e id="degrees">&#176;F</e></span>   
+            </section>
+            <section id="change_sky" class="changewidget_child">
+                <h4>Sky</h4>
+                <select id="sky_dropdown">
+                    <option id="dropdown_sunny" value="sunny">Sunny</option>
+                    <option id="dropdown_cloudy" value="cloudy">Cloudy</option>
+                    <option id="dropdown_rainy" value="rainy">Rainy</option>
+                    <option id="dropdown_snowy" value="snowy">Snowy</option>
+                </select>
+            </section>
     </section>
     <script src="src/index.js" type="text/javascript"></script>
     <footer>coded by Khandice Schuhmann &hearts;</footer>
