updates change city styling

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </h1> 
     </header>
     <section id="change_city">
-        <h4>City: </h4>
-        <input type="text" id="user_input" placeholder="Munich" value=""></input>
+        <label for="user_input">City:</label>
+        <input type="text" id="user_input" name="user_input" placeholder="Munich" value=""></input>
         <button id="reset">Reset</button>
     </section>
     <section id="widget_box">
