updates widget layout

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
         <section id="change_widgets">
             <section id="change_temp">
                 <h4>Temp</h4>
-                <span id="temp_buttons">
+                <div id="temp_wrapper">
                     <button id="raise_temp">raise temp</button>
                     <button id="lower_temp">lower temp</button>
-                </span>
-                <span id="temp_display">55 &#176;F</e></span>   
+                    <div id="temp_display">55 &#176;F</div>   
+                </div>
             </section>
             <section id="change_sky">
-                <h4>Sky</h4>
+                <p>Sky</p>
                 <select id="sky_dropdown">
                     <option id="dropdown_sunny" value="sunny">Sunny</option>
                     <option id="dropdown_cloudy" value="cloudy">Cloudy</option>
